k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: lp-production-planning-issues-workbench
  labels:
    group: "ERP-MIS"
    app_name: "postgres"
    contact_person: "douglasl_at_ping_com"
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
